--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 Rplots.pdf
 __pycache__
 Hands_on_machine_learning/datasets
+Hands_on_machine_learning/test.py
 datasets
+Machine Learning terms.md
+Machine Learning note.md
