--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Hands_on_machine_learning/test.py
 datasets
 Machine Learning terms.md
 Machine Learning note.md
+helloworld.py
+helloworld.r
+Hands_on_machine_learning/iris_tree.dot
+Hands_on_machine_learning/iris_reg_tree.dot
