--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-Rplots.pdf
-__pycache__
-Hands_on_machine_learning/datasets
-Hands_on_machine_learning/test.py
-datasets
-helloworld.py
-helloworld.r
-Hands_on_machine_learning/iris_tree.dot
-Hands_on_machine_learning/iris_reg_tree.dot
-STAT240
+Hands_on_machine_learning/datasets/housing/housing.csv
