--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 Hands_on_machine_learning/datasets/housing/housing.csv
+Rplots.pdf
+__pycache__
+Hands_on_machine_learning/datasets
+Hands_on_machine_learning/test.py
+datasets
+Hands_on_machine_learning/iris_tree.dot
+Hands_on_machine_learning/iris_reg_tree.dot
+Machine Learning note.md
+Machine Learning terms.md
+Hands_on_machine_learning
